--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
   email: false
 
 after_success:
-  - julia -e 'cd(Pkg.dir("Econometrics")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - julia --project -e 'using Pkg, Econometrics; cd(dirname(Pkg.pathof(Econometrics))); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder("."))'
 
 jobs:
   include:
