--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,4 @@ jobs:
       script:
         - julia --project -e 'using Pkg; Pkg.instantiate()'
         - julia --project docs/make.jl
+      after_success: skip
