--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ notifications:
   email: false
 
 after_success:
-  - julia --project -e 'using Pkg, Econometrics; cd(dirname(Pkg.pathof(Econometrics))); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder("."))'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
 
 jobs:
   include:
@@ -21,4 +22,3 @@ jobs:
       script:
         - julia --project -e 'using Pkg; Pkg.instantiate()'
         - julia --project docs/make.jl
-      after_success: skip
