--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ notifications:
 
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
-  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
 
 jobs:
   include:
@@ -21,3 +20,4 @@ jobs:
       script:
         - julia --project -e 'using Pkg; Pkg.instantiate()'
         - julia --project docs/make.jl
+      after_success: skip
