--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,12 @@ julia:
 codecov: true
 notifications:
   email: false
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1.0
+      os: linux
+      script:
+        - julia --project -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        - julia --project docs/make.jl
+      after_success: skip
