--- a/paper/paper.yml
+++ b/paper/paper.yml
@@ -1,21 +1,13 @@
-title: "My JuliaCon proceeding"
+title: "Econometrics.jl"
 keywords:
   - Julia
-  - Optimization
-  - Game theory
-  - Compiler
+  - Econometrics
+  - Regression Analysis
+  - Software Validation
 authors:
-  - name: 1st author
-    orcid: 0000-0003-1361-440X
-    affiliation: 1
-  - name: 2nd author
-    affiliation: 1, 2
-  - name: 3rd author
-    affiliation: 2
+  - name: José Bayoán Santiago Calderón
+    orcid: 0000-0002-8406-6175
 affiliations:
-  - name: University
-    index: 1
-  - name: National Lab
-    index: 2
-date: 24 April 2019
+  - name: Social and Decision Analytics Division, Biocomplexity Institute and Initiative, University of Virginia
+date: 1 July 2019
 bibliography: ref.bib
