--- a/paper/paper.yml
+++ b/paper/paper.yml
@@ -3,6 +3,11 @@ keywords:
   - Julia
   - Econometrics
   - Regression Analysis
+  - Generalized Linear Models
+  - Discrete Choice Models
+  - Instrumental Variables Estimation
+  - Panel Data
+  - Variable Absorption
   - Software Validation
 authors:
   - name: José Bayoán Santiago Calderón
