--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ maintainer = "José Bayoán Santiago Calderón"
 version = "0.1.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
