--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,6 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
@@ -23,6 +22,7 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 FillArrays = "0.6"
 Optim = "0.18"
 Parameters = "0.10"
+StatsBase = "0.31"
 StatsModels = "0.6"
 julia = "1.1"
 
