--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,8 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 
 [compat]
+CSV = "0.5"
+DataFrames = "0.18, 0.19"
 FillArrays = "0.6"
 Optim = "0.18"
 Parameters = "0.10"
