--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,24 @@
 language: julia
 os:
   - linux
-julia:
-  - 1.1
+  - osx
+  - windows
+matrix:
+  include:
+    - name: linux
+      os: linux
+      julia: 1.1
+    - name: osx
+      os: osx
+      julia: 1.1
+    - name: win64
+      os: windows
+      arch: x64
+      julia: 1.1
+    - name: win32
+      os: windows
+      arch: x86
+      julia: 1.1
 codecov: true
 notifications:
   email: false
