--- a/Project.toml
+++ b/Project.toml
@@ -20,14 +20,14 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 
 [compat]
-CategoricalArrays = "0.6, 0.7, 0.8"
-Distributions = "0.21, 0.22, 0.23"
-FillArrays = "0.6, 0.7, 0.8"
+CategoricalArrays = "0.8"
+Distributions = "0.23"
+FillArrays = "0.9"
 ForwardDiff = "0.10"
-Optim = "0.18, 0.19, 0.20, 0.21"
-Parameters = "0.10, 0.11, 0.12"
-StatsBase = "0.31, 0.32, 0.33"
-StatsFuns = "0.7, 0.8, 0.9"
+Optim = "1"
+Parameters = "0.12"
+StatsBase = "0.33"
+StatsFuns = "0.9"
 StatsModels = "0.6"
 TableOperations = "0.2"
 julia = "1"
