--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['^1.6.0-rc1']
+        julia-version: ['^1.5.0-0']
         julia-arch: [x64]
         os: [ubuntu-20.04]
     steps:
