--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -6,5 +6,6 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 
 [compat]
-CSV = "0.5"
-Documenter = "0.24"
+RDatasets = "0.6"
+Documenter = "0.25"
+Weave = "0.10"
