--- a/Project.toml
+++ b/Project.toml
@@ -20,22 +20,24 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 
 [compat]
-CategoricalArrays = "0.6, 0.7, 0.8"
-Distributions = "0.21, 0.22, 0.23"
-FillArrays = "0.6, 0.7, 0.8"
+CategoricalArrays = "0.8"
+Distributions = "0.23"
+FillArrays = "0.9"
 ForwardDiff = "0.10"
-Optim = "0.18, 0.19, 0.20, 0.21"
-Parameters = "0.10, 0.11, 0.12"
-StatsBase = "0.31, 0.32, 0.33"
-StatsFuns = "0.7, 0.8, 0.9"
+Optim = "1"
+Parameters = "0.12"
+StatsBase = "0.33"
+StatsFuns = "0.9"
 StatsModels = "0.6"
 TableOperations = "0.2"
 julia = "1"
 
 [extras]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 
 [targets]
-test = ["CSV", "RDatasets", "Test"]
+test = ["CSV", "Documenter", "RDatasets", "Test", "Weave"]
