--- a/Project.toml
+++ b/Project.toml
@@ -22,11 +22,11 @@ TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-CategoricalArrays = "0.9"
+CategoricalArrays = "0.8, 0.9"
 Distributions = "0.23, 0.24"
 FillArrays = "0.9, 0.10"
 ForwardDiff = "0.10"
-MLJBase = "0.15"
+MLJBase = "0.15, 0.16"
 MLJModelInterface = "0.3"
 Optim = "1"
 Parameters = "0.12"
