--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,7 @@ uuid = "4d6a76a9-bfbc-5492-8924-cf6ed7875f06"
 license = "ISC"
 description = "Econometrics in Julia"
 maintainer = "José Bayoán Santiago Calderón"
-version = "0.2.7"
+version = "0.2.8"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
@@ -22,18 +22,18 @@ TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-CategoricalArrays = "0.8"
-Distributions = "0.23"
-FillArrays = "0.9"
+CategoricalArrays = "0.8, 0.9"
+Distributions = "0.23, 0.24"
+FillArrays = "0.9, 0.10"
 ForwardDiff = "0.10"
-MLJBase = "0.15"
+MLJBase = "0.15, 0.16"
 MLJModelInterface = "0.3"
 Optim = "1"
 Parameters = "0.12"
 StatsBase = "0.33"
 StatsFuns = "0.9"
 StatsModels = "0.6"
-TableOperations = "0.2"
+TableOperations = "1"
 Tables = "1"
 julia = "1.4"
 
