--- a/Project.toml
+++ b/Project.toml
@@ -7,9 +7,11 @@ version = "0.2.8"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
+CompilerSupportLibraries_jll = "e66e0078-7015-5450-92f7-15fbd957f2ae"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+JLLWrappers = "692b3bcd-3c85-4b1f-b108-f13ce0eb3210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MLJModelInterface = "e80e1ace-859a-464e-9ed9-23947d8ae3ea"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
@@ -24,7 +26,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 [compat]
 CategoricalArrays = "0.8, 0.9"
 Distributions = "0.23, 0.24"
-FillArrays = "0.9, 0.10"
+FillArrays = "0.9, 0.10, 0.11"
 ForwardDiff = "0.10"
 MLJBase = "0.15, 0.16"
 MLJModelInterface = "0.3"
