--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,7 @@ uuid = "4d6a76a9-bfbc-5492-8924-cf6ed7875f06"
 license = "ISC"
 description = "Econometrics in Julia"
 maintainer = "José Bayoán Santiago Calderón"
-version = "0.2.8"
+version = "0.2.9"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
@@ -17,6 +17,7 @@ MLJModelInterface = "e80e1ace-859a-464e-9ed9-23947d8ae3ea"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
@@ -24,20 +25,20 @@ TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-CategoricalArrays = "0.8, 0.9"
-Distributions = "0.23, 0.24"
+CategoricalArrays = "0.8, 0.9, 0.10"
+Distributions = "0.23, 0.24, 0.25"
 FillArrays = "0.9, 0.10, 0.11"
 ForwardDiff = "0.10"
-MLJBase = "0.15, 0.16"
-MLJModelInterface = "0.3"
+JLLWrappers = "1"
+MLJModelInterface = "1"
 Optim = "1"
 Parameters = "0.12"
 StatsBase = "0.33"
-StatsFuns = "0.9"
+StatsFuns = "0.9, 1"
 StatsModels = "0.6"
 TableOperations = "1"
 Tables = "1"
-julia = "1.4"
+julia = "1.6"
 
 [extras]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
