--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,6 @@ MLJModelInterface = "e80e1ace-859a-464e-9ed9-23947d8ae3ea"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
@@ -33,6 +32,7 @@ JLLWrappers = "1"
 MLJModelInterface = "1"
 Optim = "1"
 Parameters = "0.12"
+StatsAPI = "1"
 StatsBase = "0.33"
 StatsFuns = "0.9, 1"
 StatsModels = "0.6"
@@ -46,8 +46,9 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 MLJModelInterface = "e80e1ace-859a-464e-9ed9-23947d8ae3ea"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
+StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 
 [targets]
-test = ["CSV", "Documenter", "MLJBase", "MLJModelInterface", "RDatasets", "Test", "Weave"]
+test = ["CSV", "Documenter", "MLJBase", "MLJModelInterface", "RDatasets", "StatsAPI", "Test", "Weave"]
