--- a/Project.toml
+++ b/Project.toml
@@ -3,42 +3,57 @@ uuid = "4d6a76a9-bfbc-5492-8924-cf6ed7875f06"
 license = "ISC"
 description = "Econometrics in Julia"
 maintainer = "José Bayoán Santiago Calderón"
-version = "0.2.10"
+version = "0.2.11"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 CompilerSupportLibraries_jll = "e66e0078-7015-5450-92f7-15fbd957f2ae"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JLLWrappers = "692b3bcd-3c85-4b1f-b108-f13ce0eb3210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 MLJModelInterface = "e80e1ace-859a-464e-9ed9-23947d8ae3ea"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
+StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
+WooldridgeDatasets = "b46f53ff-21ea-4df8-83e7-e19d2972755a"
 
 [compat]
+CSV = "0.10.15"
 CategoricalArrays = "0.10"
 Distributions = "0.25"
-FillArrays = "0.13"
+Documenter = "1.8.0"
+FillArrays = "1"
 ForwardDiff = "0.10"
 JLLWrappers = "1"
+MLJBase = "1.7.0"
 MLJModelInterface = "1"
 Optim = "1"
 Parameters = "0.12"
+RDatasets = "0.7.7"
 StatsAPI = "1"
-StatsBase = "0.33"
+StatsBase = "0.34"
 StatsFuns = "1"
-StatsModels = "0.6"
+StatsModels = "0.7"
 TableOperations = "1"
 Tables = "1"
-julia = "1.6"
+Test = "1.11"
+Weave = "0.10.12"
+WooldridgeDatasets = "0.1.4"
+julia = "1.11"
 
 [extras]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -52,4 +67,7 @@ Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 WooldridgeDatasets = "b46f53ff-21ea-4df8-83e7-e19d2972755a"
 
 [targets]
-test = ["CSV", "Documenter", "MLJBase", "MLJModelInterface", "RDatasets", "StatsAPI", "Test", "Weave", "WooldridgeDatasets"]
+test = [
+    "CSV", "Documenter", "MLJBase", "MLJModelInterface", "RDatasets",
+    "StatsAPI", "Test", "Weave", "WooldridgeDatasets"
+]
