--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ CategoricalArrays = "0.10"
 Distributions = "0.25"
 Documenter = "1.8.0"
 FillArrays = "1"
-ForwardDiff = "0.10"
+ForwardDiff = "0.10, 1"
 JLLWrappers = "1"
 MLJBase = "1.7.0"
 MLJModelInterface = "1"
@@ -66,7 +66,4 @@ Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 WooldridgeDatasets = "b46f53ff-21ea-4df8-83e7-e19d2972755a"
 
 [targets]
-test = [
-    "CSV", "Documenter", "MLJBase", "MLJModelInterface", "RDatasets",
-    "StatsAPI", "Test", "Weave", "WooldridgeDatasets"
-]
+test = ["CSV", "Documenter", "MLJBase", "MLJModelInterface", "RDatasets", "StatsAPI", "Test", "Weave", "WooldridgeDatasets"]
